--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/cache": "11.7.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@mui/icons-material": "5.4.1",
     "@mui/material": "^5.4.1",
@@ -39,13 +40,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ethers": "^5.7.0",
+    "events": "^3.3.0",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "ipfs": "^0.63.5",
     "ipfs-core": "^0.15.4",
     "ipfs-http-client": "^57.0.3",
     "mdb-react-ui-kit": "^4.1.0",
     "npm": "^8.18.0",
+    "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
@@ -54,15 +58,19 @@
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
     "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0",
     "reactjs-localstorage": "^1.0.1",
+    "snarkjs": "^0.4.24",
     "styled-components": "^5.3.5",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
+    "tty-browserify": "^0.0.1",
     "util": "^0.12.4",
     "web-vitals": "2.1.4",
+    "webpack": "^5.74.0",
     "yup": "^0.32.11"
   },
   "scripts": {
